--- a/nginx.conf
+++ b/nginx.conf
@@ -80,37 +80,62 @@ http {
         error_page 500 502 503 504 /50x.html;
             location = /50x.html {
         }
+        return 301 https://yupaopao.icu$request_uri;
     }
 
 # Settings for a TLS enabled server.
-#
-#    server {
-#        listen       443 ssl http2 default_server;
-#        listen       [::]:443 ssl http2 default_server;
-#        server_name  _;
-#        root         /usr/share/nginx/html;
-#
-#        ssl_certificate "/etc/pki/nginx/server.crt";
-#        ssl_certificate_key "/etc/pki/nginx/private/server.key";
-#        ssl_session_cache shared:SSL:1m;
-#        ssl_session_timeout  10m;
-#        ssl_ciphers PROFILE=SYSTEM;
-#        ssl_prefer_server_ciphers on;
-#
-#        # Load configuration files for the default server block.
-#        include /etc/nginx/default.d/*.conf;
-#
-#        location / {
-#        }
-#
-#        error_page 404 /404.html;
-#            location = /40x.html {
-#        }
-#
-#        error_page 500 502 503 504 /50x.html;
-#            location = /50x.html {
-#        }
-#    }
+
+   server {
+       listen       443 ssl http2 default_server;
+       listen       [::]:443 ssl http2 default_server;
+       server_name  www.yupaopao.icu yupaopao.icu;
+       root         /home/www;
+
+       ssl_certificate "/etc/pki/nginx/1_yupaopao.icu_bundle.crt";
+       ssl_certificate_key "/etc/pki/nginx/2_yupaopao.icu.key";
+       ssl_session_cache shared:SSL:1m;
+       ssl_session_timeout  10m;
+       ssl_ciphers PROFILE=SYSTEM;
+       ssl_prefer_server_ciphers on;
+
+       # Load configuration files for the default server block.
+       include /etc/nginx/default.d/*.conf;
+
+        location ~* \.(html)$ {
+            # 关闭访问日志
+            access_log off;
+            # 添加响应头,no-cache:协商缓存,no-store:不缓存
+            add_header  Cache-Control  max-age=no-cache;
+        }
+            
+            # 特定文件设置强缓存
+        location ~* \.(css|js|png|jpg|jpeg|gif|gz|svg|mp4|ogg|ogv|webm|htc|xml|woff)$ {
+            access_log off;
+            add_header    Cache-Control  max-age=360000;
+        }
+
+        # 反向代理配置
+        # location /api/ {
+        #     add_header Access-Control-Allow-Credentials true;
+        #     add_header Access-Control-Allow-Origin $http_origin;
+        #     add_header Access-Control-Allow-Methods 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
+        #     add_header Access-Control-Allow-Headers 'Authorization, Content-Type, Accept, Origin, User-Agent, DNT, Cache-Control, X-Mx-ReqToken, X-Requested-With';
+        #     add_header Access-Control-Max-Age 86400;
+        #     proxy_pass http://realworld.api.fed.lagounews.com/api/;
+        # }
+
+        # location / {
+        #     proxy_pass http://127.0.0.1:3000;
+        # }
+
+       error_page 404 /404.html;
+           location = /40x.html {
+       }
+
+       error_page 500 502 503 504 /50x.html;
+           location = /50x.html {
+       }
+   }
 
 }
 
