--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,7 @@ http {
     server {
         listen       80 default_server;
         listen       [::]:80 default_server;
-        server_name  47.242.36.24 172.24.40.234;
+        server_name  47.242.36.24;
         root         /home/www;
 
         # Load configuration files for the default server block.
@@ -80,7 +80,7 @@ http {
         error_page 500 502 503 504 /50x.html;
             location = /50x.html {
         }
-        return 301 https://yupaopao.icu$request_uri;
+        return 301 https://liucong.icu$request_uri;
     }
 
 # Settings for a TLS enabled server.
@@ -88,11 +88,11 @@ http {
    server {
        listen       443 ssl http2 default_server;
        listen       [::]:443 ssl http2 default_server;
-       server_name  www.yupaopao.icu yupaopao.icu;
+       server_name  www.liucong.icu liucong.icu;
        root         /home/www;
 
-       ssl_certificate "/etc/pki/nginx/1_yupaopao.icu_bundle.crt";
-       ssl_certificate_key "/etc/pki/nginx/2_yupaopao.icu.key";
+       ssl_certificate "/etc/pki/Nginx/1_liucong.icu_bundle.crt";
+       ssl_certificate_key "/etc/pki/Nginx/2_liucong.icu.key";
        ssl_session_cache shared:SSL:1m;
        ssl_session_timeout  10m;
        ssl_ciphers PROFILE=SYSTEM;
