自动化部署

--- a/nginx.conf
+++ b/nginx.conf
@@ -49,9 +49,9 @@ http {
     etag on;
 
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
-        server_name  47.242.36.24;
+        listen       8888 default_server;
+        listen       [::]:8888 default_server;
+        server_name  liucong.icu;
         root         /home/www;
 
         # Load configuration files for the default server block.
