自动化部署

--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,7 @@ http {
     server {
         listen       8888 default_server;
         listen       [::]:8888 default_server;
-        server_name  liucong.icu;
+        server_name  129.226.124.140;
         root         /home/www;
 
         # Load configuration files for the default server block.
@@ -80,7 +80,7 @@ http {
         error_page 500 502 503 504 /50x.html;
             location = /50x.html {
         }
-        return 301 https://liucong.icu$request_uri;
+        # return 301 https://liucong.icu$request_uri;
     }
 
 # Settings for a TLS enabled server.
@@ -91,7 +91,7 @@ http {
        server_name  www.liucong.icu liucong.icu;
        root         /home/www;
 
-       ssl_certificate "/etc/pki/Nginx/1_liucong.icu_bundle.crt";
+       ssl_certificate "/etc/pki/Nginx/1_liucong.icu_bundle.crt";  
        ssl_certificate_key "/etc/pki/Nginx/2_liucong.icu.key";
        ssl_session_cache shared:SSL:1m;
        ssl_session_timeout  10m;
@@ -114,6 +114,9 @@ http {
             add_header    Cache-Control  max-age=360000;
         }
 
+        location / {
+        }
+
         # 反向代理配置
         # location /api/ {
         #     add_header Access-Control-Allow-Credentials true;
@@ -128,13 +131,13 @@ http {
         #     proxy_pass http://127.0.0.1:3000;
         # }
 
-       error_page 404 /404.html;
+        error_page 404 /404.html;
            location = /40x.html {
-       }
+        }
 
-       error_page 500 502 503 504 /50x.html;
+        error_page 500 502 503 504 /50x.html;
            location = /50x.html {
-       }
+        }
    }
 
 }
